src/objects/FieloPLT__Program__c.object
<CustomObject>
    <description>Programs establish the general operations settings of your loyalty program.</description>
    <fields>
        <fullName>FieloPLT__ActualPointCost__c</fullName>
        <description>It translates Transaction Points into real cost.</description>
        <inlineHelpText>It translates Transaction Points into real cost.</inlineHelpText>
        <label>Actual Point Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloPLT__AuditPoints__c</fullName>
        <defaultValue>true</defaultValue>
        <description>It specifies where Points used in a Redemption come from.</description>
        <inlineHelpText>When ticked, it specifies where Points used in a Redemption come from.</inlineHelpText>
        <label>Audit Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__CategoryInjectQuery__c</fullName>
        <description>Field that filters Category by means of conditions.</description>
        <inlineHelpText>Field that filters Category by means of conditions.</inlineHelpText>
        <label>Category Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ExpirationMode__c</fullName>
        <description>It allows you to choose the point expiration type.</description>
        <inlineHelpText>Choose the point expiration type.</inlineHelpText>
        <label>Expiration Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__ExpirationPeriod__c</fullName>
        <description>It sets the active Points period.</description>
        <inlineHelpText>Set the active Points period.</inlineHelpText>
        <label>Expiration Period</label>
        <picklist>
            <controllingField>FieloPLT__ExpirationMode__c</controllingField>
            <picklistValues>
                <fullName>3</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option makes this your default Program.</description>
        <inlineHelpText>When ticked, Program becomes your Default Program.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__NumberOfVoucherDigits__c</fullName>
        <description>Number of digits displayed on the voucher.</description>
        <inlineHelpText>Set the number of digits displayed on the voucher.</inlineHelpText>
        <label>Number of Voucher Digits</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__OnlineTransactionProcessing__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When ticked, Transactions are processed online when recorded. Otherwise, all transactions are processed offline once a day.</description>
        <inlineHelpText>When ticked, Transactions are processed online when recorded.</inlineHelpText>
        <label>Online Transaction Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__PointsSpendingMode__c</fullName>
        <description>Way in which Points will be consumed by Redemptions or negative adjustment Transactions.</description>
        <inlineHelpText>Choose Point spending mode</inlineHelpText>
        <label>Points Spending Mode</label>
        <picklist>
            <controllingField>FieloPLT__ExpirationMode__c</controllingField>
            <picklistValues>
                <fullName>Expiration Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RequestMemberAuthorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, new Members need to be approved before being included in the Program and an Authorization Workflow needs to be established.</description>
        <inlineHelpText>When ticked, new Members need to be approved before being included in the Program.</inlineHelpText>
        <label>Request Member Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RequestRedemptionAuthorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, new Redemptions need to be approved beforehand.</description>
        <inlineHelpText>When ticked, new Redemptions need to be approved beforehand.</inlineHelpText>
        <label>Request Redemption Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RequestTransactionAuthorization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When ticked, new Transactions need to be approved beforehand.</description>
        <inlineHelpText>When ticked, new Transactions need to be approved beforehand.</inlineHelpText>
        <label>Request Transaction Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__RewardInjectQuery__c</fullName>
        <description>Field that filters Rewards by means of conditions.</description>
        <inlineHelpText>Field that filters Rewards by means of conditions.</inlineHelpText>
        <label>Reward Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SegmentCriteriaFields__c</fullName>
        <description>Segment field names grouped by Program.</description>
        <inlineHelpText>Segment field names grouped by Program.</inlineHelpText>
        <label>Segment Criteria Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SegmentInjectQuery__c</fullName>
        <description>Field that filters Segments by means of conditions.</description>
        <inlineHelpText>Field that filters Segments by means of conditions.</inlineHelpText>
        <label>Segment Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__SiteUserProfile__c</fullName>
        <description>Salesforce profile used by Members to log in to the Site.</description>
        <inlineHelpText>Salesforce profile used by Members to log in to the Site.</inlineHelpText>
        <label>Site User Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__TagInjectQuery__c</fullName>
        <description>Field that filters Tags by means of conditions.</description>
        <inlineHelpText>Field that filters Tags by means of conditions.</inlineHelpText>
        <label>Tag Inject Query</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UseAgreement__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Members need to accept the terms and conditions. This option is always checked by default.</description>
        <inlineHelpText>When checked, Members need to accept the terms and conditions to operate in the Site.</inlineHelpText>
        <label>Use Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__UserCreationClass__c</fullName>
        <description>Class for User creation reflection.</description>
        <inlineHelpText>Enter the class for User creation reflection.</inlineHelpText>
        <label>User Creation Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegisterStep2Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Page which contains the component Register Step 2 to complete registration. This field is use to make the url to complete the registration</description>
        <inlineHelpText>Select the CMS Page where the component Register step 2 is setted up to finish the registration.</inlineHelpText>
        <label>Register Step 2 Page</label>
        <referenceTo>FieloCMS__Page__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiteDomain__c</fullName>
        <label>Site Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteURL__c</fullName>
        <description>The URL used to complete the registration process.</description>
        <inlineHelpText>URL of the site used to send the links to continue the registration process</inlineHelpText>
        <label>Site URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieloPLT__ValidateNumerOfVoucherDigits</fullName>
        <active>true</active>
        <description>Voucher must have more than 4 digits.</description>
        <errorConditionFormula>FieloPLT__NumberOfVoucherDigits__c &lt; 4</errorConditionFormula>
        <errorDisplayField>FieloPLT__NumberOfVoucherDigits__c</errorDisplayField>
        <errorMessage>Voucher must have more than 4 digits.</errorMessage>
    </validationRules>
</CustomObject>